--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,15 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<script src="https://cdn.tailwindcss.com"></script>
 	<script defer src='/build/bundle.js'></script>
+	<style>
+		body{
+padding: 0px;
+}
+	</style>
 </head>
 
-<body>
+<body class="bg-slate-50">
 </body>
 </html>
